Fix issue with profile picture not showing on job card modals and company info sidebar

--- a/app/modules/SharedComponents/styles/JobCardModal.css
+++ b/app/modules/SharedComponents/styles/JobCardModal.css
@@ -28,7 +28,6 @@ display: flex;
 .imgContainer > img {
     height: 106px;
     width: 106px;
-    border: solid 2px darkslategrey;
 }
 
 .cardHeaderContainer {
